--- a/generator_js.html
+++ b/generator_js.html
@@ -1,79 +1,80 @@
 <!DOCTYPE html>
+<!--suppress SpellCheckingInspection -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Persona Generator</title>
 </head>
 <body>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-1.1.0.js"></script>
 <script>
 
-	// https://jsfiddle.net/
-	// https://jquery.com/download/
-	// http://blog.jquery.com/2013/02/04/jquery-1-9-1-released/
+    // https://jsfiddle.net/
+    // https://jquery.com/download/
+    // http://blog.jquery.com/2013/02/04/jquery-1-9-1-released/
 
-	const anrede = ["Frau", "Herr"];
+    const anrede = ["Frau", "Herr"];
 
-	const nachname = ["M\u00fcller ", " Schmidt ", " Schneider ", " Fischer ", " Weber", " Meyer", " Wagner", " Becker", " Schulz", " Hoffmann", " Sch\u00e4fer", " Bauer", " Koch", " Richter", " Klein", " Wolf", " Schr\u00f6der", " Neumann", " Schwarz", " Braun", " Hofmann", " Zimmermann", " Schmitt", " Hartmann", " Kr\u00fcger", " Schmid", " Werner", " Lange", " Schmitz", " Meier", " Krause", " Maier", " Lehmann", " Huber", " Mayer", " Herrmann", " K\u00f6hler", " Walter", " K\u00f6nig", " Schulze", " Fuchs", " Kaiser", " Lang", " Wei\u00df", " Peters", " Scholz", " Jung", " M\u00f6ller", " Hahn", " Keller", " Vogel", " Schubert", " Roth", " Frank", " Friedrich", " Beck", " G\u00fcnther", " Berger", " Winkler", " Lorenz", " Baumann"];
+    const nachname = ["M\u00fcller ", " Schmidt ", " Schneider ", " Fischer ", " Weber", " Meyer", " Wagner", " Becker", " Schulz", " Hoffmann", " Sch\u00e4fer", " Bauer", " Koch", " Richter", " Klein", " Wolf", " Schr\u00f6der", " Neumann", " Schwarz", " Braun", " Hofmann", " Zimmermann", " Schmitt", " Hartmann", " Kr\u00fcger", " Schmid", " Werner", " Lange", " Schmitz", " Meier", " Krause", " Maier", " Lehmann", " Huber", " Mayer", " Herrmann", " K\u00f6hler", " Walter", " K\u00f6nig", " Schulze", " Fuchs", " Kaiser", " Lang", " Wei\u00df", " Peters", " Scholz", " Jung", " M\u00f6ller", " Hahn", " Keller", " Vogel", " Schubert", " Roth", " Frank", " Friedrich", " Beck", " G\u00fcnther", " Berger", " Winkler", " Lorenz", " Baumann"];
 
-	const vorname_f = ["Andrea", " Jennifer", " Melanie", " Angelika", " Jessica", " Jessika", "\r\nMichelle", " Anja", " Julia", " Monika", " Anke", " Juliane", " Nadine", " Anna", " Anne", " Karin", " Nicole", "\r\nAnnett", " Karolin", " Petra", " Antje", " Katharina", " Sabine", " Barbara", " Kathrin", " Katrin", " Sabrina", " \r\nBirgit", " Katja", " Sandra", " Brigitte", " Kerstin", " Sara", " Sarah", " Christin", " Klaudia", " Silke", " \r\nChristina", " Christine", " Kristin", " Simone", " Claudia", " Laura", " Sophia", " Sophie", " Daniela", " Lea"];
+    const vorname_f = ["Andrea", " Jennifer", " Melanie", " Angelika", " Jessica", " Jessika", "\r\nMichelle", " Anja", " Julia", " Monika", " Anke", " Juliane", " Nadine", " Anna", " Anne", " Karin", " Nicole", "\r\nAnnett", " Karolin", " Petra", " Antje", " Katharina", " Sabine", " Barbara", " Kathrin", " Katrin", " Sabrina", " \r\nBirgit", " Katja", " Sandra", " Brigitte", " Kerstin", " Sara", " Sarah", " Christin", " Klaudia", " Silke", " \r\nChristina", " Christine", " Kristin", " Simone", " Claudia", " Laura", " Sophia", " Sophie", " Daniela", " Lea"];
 
-	const vorname_m = ["Dennis", " Jan", " Alexander", " Dieter", " Jens", " Andreas", " Dirk", " Jonas", " Benjamin", " Dominik", " J\u00f6rg", " Bernd", " Eric", " Erik", " J\u00fcrgen", " Christian", " Felix", " Kevin", " Daniel", " Florian", " Klaus", " David", " Frank", " Kristian", " Leon", " Mike", " Maik", " Steffen", " Lukas", " Niklas", " Sven", " Swen", " Marcel", " Patrick", " Thomas", " Marco", " Marko", " Paul", " Thorsten", " Torsten", " Mario", " Peter", " Tim", " Markus", " Philipp", " Phillipp", " Tobias", " Martin", " Ralf", " Ralph", " Tom", " Mathias", " Matthias", " Ren\u00e9", " Ulrich", " Max", " Robert", " Uwe", " Maximilian"];
+    const vorname_m = ["Dennis", " Jan", " Alexander", " Dieter", " Jens", " Andreas", " Dirk", " Jonas", " Benjamin", " Dominik", " J\u00f6rg", " Bernd", " Eric", " Erik", " J\u00fcrgen", " Christian", " Felix", " Kevin", " Daniel", " Florian", " Klaus", " David", " Frank", " Kristian", " Leon", " Mike", " Maik", " Steffen", " Lukas", " Niklas", " Sven", " Swen", " Marcel", " Patrick", " Thomas", " Marco", " Marko", " Paul", " Thorsten", " Torsten", " Mario", " Peter", " Tim", " Markus", " Philipp", " Phillipp", " Tobias", " Martin", " Ralf", " Ralph", " Tom", " Mathias", " Matthias", " Ren\u00e9", " Ulrich", " Max", " Robert", " Uwe", " Maximilian"];
 
-	const location = ["Club-Haus", " Alter Bahnhof", " Alter Botanischer Garten", " Alter Markt", " Altstadt", " Kirche", " Antiquariat Lesart", " Aquarium", " Platz", " Bar", " Atelier", " Park", " Autohaus", "Cafe Bar", "Cinemax", "Galerie", "Hotel", "Museum", "Pizzeria", "Restaurant"];
+    const location = ["Club-Haus", " Alter Bahnhof", " Alter Botanischer Garten", " Alter Markt", " Altstadt", " Kirche", " Antiquariat Lesart", " Aquarium", " Platz", " Bar", " Atelier", " Park", " Autohaus", "Cafe Bar", "Cinemax", "Galerie", "Hotel", "Museum", "Pizzeria", "Restaurant"];
 
-	const subst_m = ["Anruf", " Anzug", "Arm", "Arzt", " Ausweis", " Bahnhof", " Balkon", " Baum", " Berg", " Beruf", " Bildschirm", " Bus", " Computer", " Durst", " Drucker", " Eintrittskarte", " Einwohner", " Fahrschein", "Fernseher", " Finger", " Flughafen", " Flur", " Fr\u00fchling", " F\u00fcller", " Fu\u00df", " Fu\u00dfboden", " Garten", " Gast", " Geburtstag", " Hafen", " Hamburger", " Hut", " Hunger", " Kaffee", " Kakao", " Keller", " Kleiderhaken", " Koch", " Kuchen", " Kugelschreiber", " Kuchen", " Kunde", " Laden", "Locher", " L\u00f6ffel", " Markt", " Marktplatz", " Monitor", " Name", " Mann", " Oktober", " Opa", " Park", " Pass", " Passant", " Platz", " Projektor", " Pullover", " Radiergummi", " Regen", " Rock", " Schinken", " Schl\u00fcssel", " Schnaps", " Schnee", " Schrank", " September", " Sessel", " Sommer", " Star", " Strumpf", " Stuhl", " Supermarkt", " Tag", " Tee", " Teppich", " Test", " Tisch", " Tourist", " Urlaub", " Vater", " Wagen", " Wunsch", " Zeiger", " Zug", " Zuschauer"];
+    const subst_m = ["Anruf", " Anzug", "Arm", "Arzt", " Ausweis", " Bahnhof", " Balkon", " Baum", " Berg", " Beruf", " Bildschirm", " Bus", " Computer", " Durst", " Drucker", " Eintrittskarte", " Einwohner", " Fahrschein", "Fernseher", " Finger", " Flughafen", " Flur", " Fr\u00fchling", " F\u00fcller", " Fu\u00df", " Fu\u00dfboden", " Garten", " Gast", " Geburtstag", " Hafen", " Hamburger", " Hut", " Hunger", " Kaffee", " Kakao", " Keller", " Kleiderhaken", " Koch", " Kuchen", " Kugelschreiber", " Kuchen", " Kunde", " Laden", "Locher", " L\u00f6ffel", " Markt", " Marktplatz", " Monitor", " Name", " Mann", " Oktober", " Opa", " Park", " Pass", " Passant", " Platz", " Projektor", " Pullover", " Radiergummi", " Regen", " Rock", " Schinken", " Schl\u00fcssel", " Schnaps", " Schnee", " Schrank", " September", " Sessel", " Sommer", " Star", " Strumpf", " Stuhl", " Supermarkt", " Tag", " Tee", " Teppich", " Test", " Tisch", " Tourist", " Urlaub", " Vater", " Wagen", " Wunsch", " Zeiger", " Zug", " Zuschauer"];
 
-	const subst_f = ["Adresse", " Apfelsine", " Apotheke", " Bank", " Bankkarte", " Bedienung", " Beschreibung", " Bestellung", " Bibliothek", " Bluse", " Brille", " Br\u00fccke", " City", " Cola", " Decke", " Diskette", " Dolmetscherin", " Dose", " Dusche", " Eile", " Einladung", " Etage", " Fahrkarte", " Festung", " Fotografie", " Frage", " Funktion", " Gabel", " Garage", " Gardine", " Gasse", " Gitarre", " Gr\u00f6\u00dfe", " Hilfe", " Hose", " H\u00fctte", " Information", " Kasse", " Kassette", " Kirche", " Krawatte", " Kreditkarte", " Kreide", " K\u00fcche", " Kultur", " Lampe", " Landkarte", " Landschaft", " Mandarine", " Maschine", " Maus", " Milch", " Mutter", " M\u00fctze", " Nachricht", " Nacht", " Nase", " Natur", " Nummer", " Oma", " Oper", " Ordnung", " Pause", " Pflanze", " Pizza", " Polizistin", " Post", " Postkarte", " Pr\u00fcfung", " Reparatur", " Reservierung", " Sache", " Sahne", " Schule", " Sehensw\u00fcrdigkeit", " SMS", " Socke", " Sonne", " Stra\u00dfe", " Stra\u00dfenbahn", " Tasche", " Tasse", " Toilette", " Torte", " U-Bahn", " \u00dcberraschung", " \u00dcbung", " Uhr", " Umwelt", " Universit\u00e4t", " Verbindung", " Wand", " Wanderung", " Welt", " Werbung", " Werkstatt", " Wirtschaft", " Woche", " Wurst", " Zeitung"];
+    const subst_f = ["Adresse", " Apfelsine", " Apotheke", " Bank", " Bankkarte", " Bedienung", " Beschreibung", " Bestellung", " Bibliothek", " Bluse", " Brille", " Br\u00fccke", " City", " Cola", " Decke", " Diskette", " Dolmetscherin", " Dose", " Dusche", " Eile", " Einladung", " Etage", " Fahrkarte", " Festung", " Fotografie", " Frage", " Funktion", " Gabel", " Garage", " Gardine", " Gasse", " Gitarre", " Gr\u00f6\u00dfe", " Hilfe", " Hose", " H\u00fctte", " Information", " Kasse", " Kassette", " Kirche", " Krawatte", " Kreditkarte", " Kreide", " K\u00fcche", " Kultur", " Lampe", " Landkarte", " Landschaft", " Mandarine", " Maschine", " Maus", " Milch", " Mutter", " M\u00fctze", " Nachricht", " Nacht", " Nase", " Natur", " Nummer", " Oma", " Oper", " Ordnung", " Pause", " Pflanze", " Pizza", " Polizistin", " Post", " Postkarte", " Pr\u00fcfung", " Reparatur", " Reservierung", " Sache", " Sahne", " Schule", " Sehensw\u00fcrdigkeit", " SMS", " Socke", " Sonne", " Stra\u00dfe", " Stra\u00dfenbahn", " Tasche", " Tasse", " Toilette", " Torte", " U-Bahn", " \u00dcberraschung", " \u00dcbung", " Uhr", " Umwelt", " Universit\u00e4t", " Verbindung", " Wand", " Wanderung", " Welt", " Werbung", " Werkstatt", " Wirtschaft", " Woche", " Wurst", " Zeitung"];
 
-	const subst_n = [" Auto", " Bad", " Bein", " Bett", " Bier", " Bild", " Br\u00f6tchen", " Buch", " Caf\u00e9", " Einkaufszentrum", " Fahrrad", " Fest", " Flugzeug", " Foto", " Fr\u00e4ulein", " Fr\u00fchst\u00fcck", " Gef\u00fchl", " Gem\u00fcse", " Gesch\u00e4ft", " Glas", " Gleis", " Handy", " Haus", " Heft", " Hemd", " Hotel", " K\u00e4nnchen", " Internet", " Kind", " Kino", " Kleid", " Leben", " M\u00e4dchen", " Motorrad", " Museum", " Radio", " Regal", " Restaurant", " Schiff", " Schnitzel", " Sofa", " Spiel", " St\u00fcck", " Taxi", " Telefon", " Theater", " Ticket", " Tonbandger\u00e4t", " Warenhaus", " Wetter"];
+    const subst_n = [" Auto", " Bad", " Bein", " Bett", " Bier", " Bild", " Br\u00f6tchen", " Buch", " Caf\u00e9", " Einkaufszentrum", " Fahrrad", " Fest", " Flugzeug", " Foto", " Fr\u00e4ulein", " Fr\u00fchst\u00fcck", " Gef\u00fchl", " Gem\u00fcse", " Gesch\u00e4ft", " Glas", " Gleis", " Handy", " Haus", " Heft", " Hemd", " Hotel", " K\u00e4nnchen", " Internet", " Kind", " Kino", " Kleid", " Leben", " M\u00e4dchen", " Motorrad", " Museum", " Radio", " Regal", " Restaurant", " Schiff", " Schnitzel", " Sofa", " Spiel", " St\u00fcck", " Taxi", " Telefon", " Theater", " Ticket", " Tonbandger\u00e4t", " Warenhaus", " Wetter"];
 
-	/**
-	 *
-	 * @returns {string}
-	 */
-	function generatePersona() {
-		let strout = "";
-		const genderout = anrede[Math.floor(Math.random() * anrede.length)];
-		strout += genderout
-		if (genderout === "Herr") {
-			strout += vorname_m[Math.floor(Math.random() * vorname_m.length)]
-		} else {
-			strout += vorname_f[Math.floor(Math.random() * vorname_f.length)]
-		}
-		strout += nachname[Math.floor(Math.random() * nachname.length)]
-		strout += ", ist momentan in "
-		strout += location[Math.floor(Math.random() * location.length)]
+    /**
+     *
+     * @returns {string}
+     */
+    function generatePersona() {
+        let strout = "";
+        const genderout = anrede[Math.floor(Math.random() * anrede.length)];
+        strout += genderout
+        if (genderout === "Herr") {
+            strout += vorname_m[Math.floor(Math.random() * vorname_m.length)]
+        } else {
+            strout += vorname_f[Math.floor(Math.random() * vorname_f.length)]
+        }
+        strout += nachname[Math.floor(Math.random() * nachname.length)]
+        strout += ", ist momentan in "
+        strout += location[Math.floor(Math.random() * location.length)]
 
-		const kindernr = Math.floor(Math.random() * 3);
-		if (kindernr !== 0) {
-			strout += " mit seine " + kindernr + " kinder"
-		}
+        const kindernr = Math.floor(Math.random() * 3);
+        if (kindernr !== 0) {
+            strout += " mit seine " + kindernr + " kinder"
+        }
 
-		strout += " weil seine ( "
-		strout += subst_m[Math.floor(Math.random() * subst_m.length)] + " / "
-		strout += subst_f[Math.floor(Math.random() * subst_f.length)] + " / "
-		strout += subst_n[Math.floor(Math.random() * subst_n.length)]
-		strout += " ) ... "
-		return strout;
-	}
+        strout += " weil seine ( "
+        strout += subst_m[Math.floor(Math.random() * subst_m.length)] + " / "
+        strout += subst_f[Math.floor(Math.random() * subst_f.length)] + " / "
+        strout += subst_n[Math.floor(Math.random() * subst_n.length)]
+        strout += " ) ... "
+        return strout;
+    }
 
-	/**
-	 *
-	 * @param loop
-	 * @returns {string}
-	 */
-	function loopPersona(loop) {
-		let strloop = "";
-		for (let i = 0; i <= loop; i++) {
-			strloop += generatePersona() + "<br>\n";
-		}
-		return strloop;
-	}
+    /**
+     *
+     * @param loop
+     * @returns {string}
+     */
+    function loopPersona(loop) {
+        let strloop = "";
+        for (let i = 0; i <= loop; i++) {
+            strloop += generatePersona() + "<br>\n";
+        }
+        return strloop;
+    }
 
-	const stroutlist = loopPersona(50);
-	$('#generated_list').html("" + stroutlist);
+    const stroutlist = loopPersona(50);
+    $('#generated_list').html("" + stroutlist);
 
 </script>
 
